# loop-engineering-workflow

./: .env.example  .gitignore  README.md  pyproject.toml
config/: providers.yaml  research_sources.yaml  workflow.yaml
config/agents/: checker_a.md  checker_b.md  checker_c.md  maker.md  orchestrator.md  plan_approval.md  planner.md  prioritizer.md  reporter.md  research.md  self_review.md
config/conventions/: commit.md  mr.md
docs/: README.md  agent-config.md  architecture.md  development.md  task-sources.md
docs/runbooks/: operations.md
docs/superpowers/: HANDOFF.md
docs/superpowers/plans/: 2026-07-12-phase1-daemon-scheduler-api.md  2026-07-12-phase2-hitl-strategies-approvals.md  2026-07-13-phase3-forge-reporter-refactor.md  2026-07-13-phase4-eod-batch.md  2026-07-13-phase5-vue-dashboard.md  2026-07-14-dashboard-workflow-control.md  2026-07-15-dashboard-enhancements-a.md  (+3 more)
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/scripts/: gen-types.sh
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: client.ts  (+2 more)
scripts/: install-service.bat  run-daemon-dev.bat
src/devflow/: __init__.py  cli.py  config.py  graph.py  llm_factory.py  mock_llm.py  schemas.py  state.py  telegram_bridge.py  todo.py  visualization.py
tests/: conftest.py
tests/integration/: test_dashboard_e2e.py  test_eod_batch.py  test_forge_reporter.py  test_graph.py  test_hitl_strategies.py
tests/unit/: test_cli.py  test_code_tools.py  test_config.py  test_git_worktree.py  test_graph.py  test_llm_factory.py  test_orchestrator.py  test_reporter.py  test_research_config.py  test_research_node.py  test_runner.py  test_telegram_bridge.py  test_todo.py  test_visualization.py
(+142 files in other folders)
