[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-devflow-super"
version = "0.1.0"
description = "LangGraph-based development workflow super-powers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "langsmith>=0.1.0",
    "pydantic>=2.8.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1.0",
    "GitPython>=3.1.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
    "anyio>=4.0.0",
    "apscheduler>=3.10.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
research = [
    "duckduckgo-search>=6.0",
]
telegram = [
    "httpx>=0.27.0",
]
web = [
    "httpx>=0.27.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
devflow-super = "devflow.cli:app"
devflow-daemon = "devflow.daemon.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/devflow"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/devflow/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
